name:                backprop
version:             0.0.3.0
synopsis:            Heterogeneous, type-safe automatic backpropagation in Haskell
description:         See <https://github.com/mstksg/backprop#readme README.md>
                     .
                     At the moment, this project is in pre-alpha, and is
                     published and put up on Hackage with 100% documentation
                     coverage as a call for comments and thoughts.  See
                     <https://github.com/mstksg/backprop#todo TODO.md> section
                     in the README for more information on what's missing and
                     potential avenues for contribution.
homepage:            https://github.com/mstksg/backprop
bug-reports:         https://github.com/mstksg/backprop/issues
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     Build.hs
                     renders/backprop-mnist.md
                     renders/backprop-mnist.pdf
                     renders/backprop-neural-test.md
                     renders/backprop-neural-test.pdf
                     samples/backprop-mnist.lhs
                     samples/backprop-monotest.hs
                     samples/backprop-neural-test.lhs
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Backprop
                       Numeric.Backprop.Implicit
                       Numeric.Backprop.Iso
                       Numeric.Backprop.Mono
                       Numeric.Backprop.Mono.Implicit
                       Numeric.Backprop.Op
                       Numeric.Backprop.Op.Mono
  other-modules:       Numeric.Backprop.Internal
                       Data.Type.Util
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , generics-sop
                     , microlens
                     , microlens-mtl
                     , microlens-th
                     , mtl
                     , profunctors
                     , reflection
                     , tagged
                     , transformers-base
                     , type-combinators
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark backprop-mnist-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             MNISTBench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , backprop
                     , bifunctors
                     , criterion
                     , deepseq
                     , directory
                     , generics-sop
                     , hmatrix    >= 0.18
                     , mnist-idx
                     , mwc-random
                     , time
                     , transformers
                     , type-combinators
                     , vector
  default-language:    Haskell2010

-- test-suite backprop-doctest
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      doctest
--   main-is:             doctest.hs
--   build-depends:       base
--                      , backprop
--                      , doctest
--                      , Glob
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- test-suite backprop-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , backprop
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/backprop
