name:                backprop
version:             0.1.0.0
synopsis:            Heterogeneous, type-safe automatic backpropagation in Haskell
description:         See <https://github.com/mstksg/backprop#readme README.md>
homepage:            https://github.com/mstksg/backprop
bug-reports:         https://github.com/mstksg/backprop/issues
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2018
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     Build.hs
                     samples/backprop-mnist.lhs
                     samples/extensible-neural.lhs
                     renders/backprop-mnist.md
                     renders/backprop-mnist.pdf
                     renders/extensible-neural.md
                     renders/extensible-neural.pdf
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Backprop
                       Numeric.Backprop.Op
  other-modules:       Numeric.Backprop.Internal
                       Data.Type.Util
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , deepseq
                     , microlens
                     , primitive
                     , reflection
                     , transformers
                     , type-combinators
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -fprint-explicit-kinds -fwarn-redundant-constraints

benchmark backprop-mnist-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             MNISTBench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , backprop
                     , criterion
                     , deepseq
                     , directory
                     , hmatrix    >= 0.18
                     , lens
                     , mnist-idx
                     , mwc-random
                     , time
                     , transformers
                     , vector
  default-language:    Haskell2010

-- test-suite backprop-doctest
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      doctest
--   main-is:             doctest.hs
--   build-depends:       base
--                      , backprop
--                      , doctest
--                      , Glob
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- test-suite backprop-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , backprop
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/backprop
